# green_tsetlin_to_trainable_C

./: .gitignore  MultiClassTsetlinMachine.c  MultiClassTsetlinMachine.h  README.md  TODO.txt  TsetlinMachine.c  TsetlinMachine.h  demo.c  demo.py  makefile  pyproject.toml
demos/mnist/c/: demo.c  mnist_util.c  mnist_util.h  pretrained_inference_demo.c  training_demo.c
demos/mnist/python/: demo.py
demos/model_size/c/: demo.c
schemas/: tsetlin_machine.fbs
src/c/include/: TsetlinMachine.h  fast_prng.h  sparse_tsetlin_machine.h  stateless_tsetlin_machine.h  tm_output_activation.h  tsetlin_machine.h  utility.h
src/c/include/flatbuffers/: tsetlin_machine_builder.h  tsetlin_machine_reader.h  tsetlin_machine_verifier.h
src/c/src/: TsetlinMachine.c  fast_prng.c  sparse_tsetlin_machine.c  stateless_tsetlin_machine.c  tm_output_activation.c  tsetlin_machine.c  utility.c
src/python/: gt_to_bin.py  gt_to_fbs.py
src/python/TsetlinMachine/: Model.py  Parameters.py
tests/c/: test_linked_list.c  test_runner.c  test_tsetlin_machine.c
